crates/ruff_python_parser/tests/snapshots/valid_syntax@function_def_parameter_range.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..56,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 0..55,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 4..7,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 7..43,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                range: 13..23,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 13..23,
                                    node_index: NodeIndex(None),
                                    name: Identifier {
                                        id: Name("first"),
                                        range: 13..18,
                                        node_index: NodeIndex(None),
                                    },
                                    annotation: Some(
                                        Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 20..23,
                                                id: Name("int"),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                    runtime_type_comment: None,
                                    runtime_type_comment_bytes: None,
                                },
                                default: None,
                            },
                            ParameterWithDefault {
                                range: 29..40,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 29..40,
                                    node_index: NodeIndex(None),
                                    name: Identifier {
                                        id: Name("second"),
                                        range: 29..35,
                                        node_index: NodeIndex(None),
                                    },
                                    annotation: Some(
                                        Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 37..40,
                                                id: Name("int"),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                    runtime_type_comment: None,
                                    runtime_type_comment_bytes: None,
                                },
                                default: None,
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                        runtime_defaults: None,
                    },
                    returns: Some(
                        Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 47..50,
                                id: Name("int"),
                                ctx: Load,
                            },
                        ),
                    ),
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 52..55,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 52..55,
                                    },
                                ),
                            },
                        ),
                    ],
                    runtime_decorator_list: None,
                    runtime_type_comment: None,
                    runtime_type_comment_bytes: None,
                    runtime_body: None,
                },
            ),
        ],
        runtime_body: None,
    },
)
```
